--- a/Pages/index.html
+++ b/Pages/index.html
@@ -32,21 +32,19 @@
         </div>
         <div class="content">
             <h1>Web Design & <br><span>Development</span> <br>Course</h1>
-            <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt neque
-                expedita atque eveniet <br> quis nesciunt. Quos nulla vero consequuntur, fugit nemo ad delectus
-                <br> a quae totam ipsa illum minus laudantium?
+            <p class="par">Learning Management System
             </p>
 
-            <button class="cn"><a href="file:///C:/Users/Dell/OneDrive/Desktop/IT%20PROJECT/join.html">JOIN US</a></button>
+            <button class="cn"><a href="/Pages/join.html">JOIN US</a></button>
 
             <div class="form">
                 <h2>Login Here</h2>
                 <input type="email" name="email" placeholder="Enter Email Here">
                 <input type="password" name="" placeholder="Enter Password Here">
-                <button class="btnn"><a href="file:///C:/Users/Dell/OneDrive/Desktop/IT%20PROJECT/next.html">Login</a></button>
+                <button class="btnn"><a href="/Pages/next.html">Login</a></button>
 
                 <p class="link">Don't have an account<br>
-                    <a href="file:///C:/Users/Dell/OneDrive/Desktop/IT%20PROJECT/form.html">Sign up </a> here</a>
+                    <a href="/Pages/form.html">Sign up </a> here</a>
                 </p>
                 <p class="liw">Log in with</p>
 
